<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etNumberOfStrengthBar"
            android:background="@color/colorTransparent"
            android:inputType="number"
            android:hint="@string/enter_strength_bar_length"
            android:textColor="@color/colorPrimaryDark"
            android:importantForAutofill="no"
            tools:targetApi="o"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"/>

        <Button
            android:id="@+id/btSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_gravity="end"
            android:layout_marginTop="4dp"
            android:textAllCaps="false"
            android:visibility="gone"
            android:text="@string/save"/>


        <TextView
            android:id="@+id/tvSelectColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:text="@string/select_color_for_each_strength_bar"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:visibility="gone"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvStrengthBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"/>

        <Button
            android:id="@+id/btSaveColors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_gravity="end"
            android:layout_marginTop="4dp"
            android:textAllCaps="false"
           android:visibility="gone"
            android:text="@string/save"/>
    </LinearLayout>




    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordFieldCheck"
        android:background="@color/colorTransparent"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        android:textColor="@color/colorPrimaryDark"
        android:importantForAutofill="no"
        tools:targetApi="o"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"/>

    <com.android.thenishchalraj.passwordstrength.PasswordStrengthBar
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:id="@+id/passwordBarCheck"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/strengthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/visibilityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_gravity="end"
        android:layout_marginTop="4dp"
        android:textAllCaps="false"
        android:visibility="gone"
        android:text="@string/see_password"/>

    <LinearLayout
        android:id="@+id/ll_dynamic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp">

    </LinearLayout>


</LinearLayout>